--- a/AgriculturePresentation.Business/AgriculturePresentation.Business.csproj
+++ b/AgriculturePresentation.Business/AgriculturePresentation.Business.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AgriculturePresentation.DataAccess\AgriculturePresentation.DataAccess.csproj" />
     <ProjectReference Include="..\AgriculturePresentation.Entities\AgriculturePresentation.Entities.csproj" />
   </ItemGroup>
